--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,12 +1,3 @@
-/** 
- * Holiday Template
- * http://www.templatemo.com/tm-475-holiday
- *
- * COLOR CODES
- * Yellow	#FCDD44
- *
- */
-
 /* CSS Resets */ 
 ul,p {
 	margin: 0; 
@@ -554,11 +545,13 @@ hr { border-top: 1px solid #111010; }
 
 /*Login button*/
 .main{
-    width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
+    height: auto;
+    margin: auto;
+    position: relative;
+    top: -60px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
 }
 
 .content{
